# commandopy

./: .gitignore  LICENSE  Makefile  README.md  Taskfile.yml  commando.html  dev-memo.md  genindex.html  objects.inv  pyproject.toml  searchindex.js  tox.ini
.github/workflows/: ci.yaml  python-publish.yml
_modules/commando/: commando.html
_sources/: commando.rst.txt  index.rst.txt
commando/: __init__.py  commando.py  util.py
docs/: commando.rst  conf.py  dev-memo.md  dev.md  index.rst
docs/_build/html/: .buildinfo  commando.html  dev.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/commando/: commando.html  util.html
docs/_build/html/_sources/: dev.md.txt  index.rst.txt  modules.rst.txt
examples/: ex-run.py  requirements.txt  simple-ex.py
tests/: test_commando.py  test_util.py
