[tool.poetry]
name = "pycommando"
version = "1.1.0"
description = "A framework for batch processing."
readme = "README.md"
authors = ["zztkm"]
packages = [
    { include = "commando" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.18.3"
furo = "^2022.6.21"
myst-parser = "^0.18.0"
sphinx-copybutton = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
