[tool.poetry]
name = "pycommando"
version = "1.2.0"
description = "A framework for batch processing."
readme = "README.md"
authors = ["zztkm"]
packages = [
    { include = "commando" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.docs.dependencies]
myst-parser = "^0.18.0"
sphinx-autodoc-typehints = "^1.18.3"
furo = "^2022.6.21"
sphinx-copybutton = "^0.5.0"
Sphinx = "^5.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
